--- a/first-app/src/index.css
+++ b/first-app/src/index.css
@@ -81,15 +81,15 @@
     @apply w-full bg-light-100/5 px-4 py-3 rounded-lg mt-10 max-w-3xl mx-auto;
 
     & div {
-      @apply relative flex items-center;
+      @apply relative flex flex-row items-center;
     }
 
     & img {
-      @apply absolute left-2 h-5 w-5;
+      @apply left-2 h-5 w-5 inline object-center;
     }
 
     & input {
-      @apply w-full bg-transparent py-2 sm:pr-10 pl-10 text-base text-gray-200 placeholder-light-200 outline-hidden;
+      @apply w-9/10 bg-transparent py-2 sm:pr-10 pl-10 text-base text-gray-200 placeholder-light-200 outline-hidden;
     }
   }
 
