--- a/first-app/src/App.css
+++ b/first-app/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -39,4 +42,18 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.font-fam {
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.font-fam-bold {
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: bold;
 }
